# openmw-tes3mp

./: CMakeLists.txt  appveyor.yml
CI/: before_script.msvc.sh
apps/esmlib/: CMakeLists.txt  esmlib.cpp  esmlib.h  esmlibmain.cpp
apps/esmlib/esm/: cellid.hpp  effectlist.hpp  esmcommon.hpp  esmreader.cpp  esmreader.hpp  landutils.hpp  loadacti.hpp  loadalch.hpp  loadappa.hpp  loadarmo.hpp  loadbody.hpp  loadbook.hpp  loadbsgn.hpp  loadclas.hpp  loadclot.hpp  loadcont.hpp  loadcrea.hpp  loaddoor.hpp  loadench.hpp  loadglob.hpp  loadingr.hpp  loadland.hpp  loadltex.hpp  loadmgef.hpp  loadmisc.hpp  loadskil.hpp  loadspel.hpp  loadstat.hpp  loadtes3.cpp  loadtes3.hpp  transport_dest.hpp  variant.hpp
apps/openmw-mp/: CMakeLists.txt
